--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,36 +39,78 @@
                 </div>
             </div>
         </nav>
+        <!-- images slider  -->
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active d-flex ">
+
+                        <div class="row d-flex align-items-center bg-primary p-3">
+                            <div class="col-lg-7 ">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a magnam earum
+                                    nulla esse amet nisi laborum quisquam, officia voluptatem fuga neque obcaecati
+                                    debitis facere consectetur commodi corporis atque velit.</p>
+                                <h2>$1289</h2>
+                                <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item active d-flex ">
+
+                        <div class="row d-flex align-items-center bg-primary p-3">
+                            <div class="col-lg-7 ">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a magnam earum
+                                    nulla esse amet nisi laborum quisquam, officia voluptatem fuga neque obcaecati
+                                    debitis facere consectetur commodi corporis atque velit.</p>
+                                <h2>$1289</h2>
+                                <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item active d-flex ">
+
+                        <div class="row d-flex align-items-center bg-primary p-3">
+                            <div class="col-lg-7 ">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium a magnam earum
+                                    nulla esse amet nisi laborum quisquam, officia voluptatem fuga neque obcaecati
+                                    debitis facere consectetur commodi corporis atque velit.</p>
+                                <h2>$1289</h2>
+                                <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
     <main>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
 
-
-
-
-                <div class="carousel-item active d-flex">
-
-                    <img src="images/banner-images/tv.png" class="d-block w-50" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="images/banner-images/xbox.png" class="d-block w-50" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="images/banner-images/headphone.png" class="d-block w-50" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
         <section class="container">
             <h4>Shoes</h4>
 
