--- a/index.html
+++ b/index.html
@@ -110,8 +110,32 @@
         </section>
     </header>
     <main>
-
         <section class="container">
+            <h2>Catagories</h2>
+            <div class="row gx-5">
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between ">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-danger d-flex align-items-center justify-content-between">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between">
+                        <h1 class="text-white">Shoe</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="container my-5">
             <h4>Shoes</h4>
 
             <div class="card" style="width: 18rem;">
