--- a/index.html
+++ b/index.html
@@ -138,18 +138,50 @@
         <section class="container my-5">
             <h4>Shoes</h4>
 
-            <div class="card" style="width: 18rem;">
-                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Reebok Dart Man's Shoe</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <p class="f">$1289</p>
-                    <a href="#" class="btn btn-dark btn-lg">Buy Now</a>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Dart Man's Shoe</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <p class="f">$1289</p>
+                            <a href="#" class="btn btn-dark btn-lg">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Dart Man's Shoe</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <p class="f">$1289</p>
+                            <a href="#" class="btn btn-dark btn-lg">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Dart Man's Shoe</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's content.</p>
+                            <p class="f">$1289</p>
+                            <a href="#" class="btn btn-dark btn-lg">Buy Now</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </section>
+        <section></section>
     </main>
 
 
